--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "bin": "artes",
     "topics": {
       "list": {
-        "description": "list requests, tests or suites"
+        "description": "list requests, environments, tests or suites"
       }
     },
     "plugins": [
