--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-autocomplete": "^0.3.0",
-    "@oclif/plugin-help": "^3.2.2",
+    "@oclif/plugin-help": "^3.2.3",
     "@types/http-string-parser": "0.0.29",
-    "@types/mock-fs": "^4.13.0",
-    "ajv": "^8.6.1",
+    "@types/mock-fs": "^4.13.1",
+    "ajv": "^8.6.2",
     "axios": "^0.21.1",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.2",
     "http-string-parser": "0.0.6",
-    "mock-fs": "^4.13.0",
+    "mock-fs": "^4.14.0",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/test": "^1.2.8",
-    "@types/chai": "^4.2.15",
+    "@types/chai": "^4.2.21",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^10.17.55",
+    "@types/node": "^10.17.60",
     "chai": "^4.3.4",
-    "eslint": "^5.16.0",
+    "eslint": "^7.0.0",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-oclif-typescript": "^0.1.0",
     "globby": "^10.0.2",
     "mocha": "^5.2.0",
     "nyc": "^14.1.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.9"
+    "typescript": "^4.0.0"
   },
   "engines": {
     "node": ">=14.16.0"
@@ -80,7 +80,9 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test-all": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
-    "test": "mocha  --forbid-only",
+    "test": "mocha --forbid-only",
+    "lint": "eslint . --ext .ts --config .eslintrc",
+    "lint-fix": "eslint . --ext .ts --config .eslintrc --fix",
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts"
