--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chalk": "^4.1.2",
     "http-string-parser": "0.0.6",
     "mock-fs": "^4.14.0",
+    "nunjucks": "^3.2.3",
     "tslib": "^1.14.1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/chai": "^4.2.21",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.60",
+    "@types/nunjucks": "^3.2.0",
     "chai": "^4.3.4",
     "eslint": "^7.0.0",
     "eslint-config-oclif": "^3.1.0",
