--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "ajv": "^8.6.2",
     "axios": "^0.21.1",
     "chalk": "^4.1.2",
+    "cli-ux": "^5.6.3",
     "http-string-parser": "0.0.6",
+    "jsonpath-plus": "^6.0.1",
     "mock-fs": "^4.14.0",
     "nunjucks": "^3.2.3",
     "tslib": "^1.14.1"
@@ -26,6 +28,7 @@
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/test": "^1.2.8",
     "@types/chai": "^4.2.21",
+    "@types/jsonpath": "^0.2.0",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.17.60",
     "@types/nunjucks": "^3.2.0",
