--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc",
-    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
+    "prepack": "rm -rf lib && tsc -b && oclif-dev manifest",
     "test-all": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "test": "mocha --forbid-only",
     "lint": "eslint . --ext .ts --config .eslintrc",
