--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "chalk": "^4.1.2",
     "cli-ux": "^5.6.3",
     "http-string-parser": "0.0.6",
-    "jsonpath-plus": "^6.0.1",
+    "jsonata": "^1.8.5",
     "mock-fs": "^4.14.0",
     "nunjucks": "^3.2.3",
     "tslib": "^1.14.1"
