--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonata": "^1.8.5",
     "mock-fs": "^4.14.0",
     "nunjucks": "^3.2.3",
-    "tslib": "^1.14.1"
+    "tslib": "^1.14.1",
+    "xlsx": "^0.18.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
