--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "chalk": "^4.1.2",
     "cli-ux": "^5.6.3",
     "date-fns": "^2.28.0",
+    "exceljs": "^4.3.0",
     "http-string-parser": "0.0.6",
     "jsonata": "^1.8.5",
     "mock-fs": "^4.14.0",
     "nunjucks": "^3.2.3",
-    "tslib": "^1.14.1",
-    "xlsx": "^0.18.0"
+    "tslib": "^1.14.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
