--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,22 @@
 {
-  "extends": ["oclif", "oclif-typescript"]
+  "extends": ["oclif", "oclif-typescript"],
+  "rules": {
+    "camelcase": "off",
+    "unicorn/no-abusive-eslint-disable": "off",
+    "unicorn/prefer-spread": "off",
+    "unicorn/prefer-module": "off",
+    "unicorn/prefer-node-protocol": "off",
+    "unicorn/import-style": "off",
+    "unicorn/consistent-function-scoping": "off",
+    "unicorn/no-array-reduce": "off",
+    "unicorn/prefer-array-some": "off",
+    "unicorn/no-array-for-each": "off",
+    "node/no-missing-import": "off",
+    "node/no-extraneous-import": off,
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/ban-types": "off"
+  }
 }
