--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "date-fns": "^2.28.0",
     "exceljs": "^4.3.0",
     "http-string-parser": "0.0.6",
+    "js-yaml": "^4.1.0",
     "jsonata": "^1.8.5",
     "nunjucks": "^3.2.3"
   },
   "devDependencies": {
     "@oclif/test": "^2",
     "@types/chai": "^4",
+    "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.4",
     "@types/nunjucks": "^3.2.0",
