--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm cache clear & npm ci
+      - run: npm ci
       - run: npm run lint
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: mkdir .nyc_output
-      - run: npm cache clear & npm ci
+      - run: npm ci
       - run: npm run test-all
