--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - run: npm ci
       - run: npm run lint
   test:
@@ -16,5 +19,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: mkdir .nyc_output
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: npm i -g yarn
       - run: npm ci
       - run: npm run test-all
