--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "posttest": "npm run lint",
     "prepack": "npm run build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only",
-    "test-all": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "test-all": "mocha --parallel --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
   "types": "dist/index.d.ts"
