--- a/package.json
+++ b/package.json
@@ -92,8 +92,9 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "npm run build && oclif manifest && oclif readme",
-    "test": "mocha --forbid-only",
-    "test-all": "mocha --parallel --forbid-only \"test/**/*.test.ts\"",
+    "test-unit": "mocha --forbid-only 'test/**/*.test.ts' --ignore 'test/commands/**/*.test.ts'",
+    "test-command": "mocha --forbid-only 'test/commands/**/*.test.ts'",
+    "test-all": "mocha --forbid-only 'test/**/*.test.ts'",
     "version": "oclif readme && git add README.md"
   },
   "types": "dist/index.d.ts"
