--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "npm run build && oclif manifest && oclif readme",
+    "test": "mocha --forbid-only",
     "test-unit": "mocha --forbid-only 'test/**/*.test.ts' --ignore 'test/commands/**/*.test.ts'",
     "test-command": "mocha --forbid-only 'test/commands/**/*.test.ts'",
     "test-all": "mocha --forbid-only 'test/**/*.test.ts'",
