--- a/package.json
+++ b/package.json
@@ -93,9 +93,7 @@
     "posttest": "npm run lint",
     "prepack": "npm run build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only",
-    "test-unit": "mocha --forbid-only 'test/**/*.test.ts' --ignore 'test/commands/**/*.test.ts'",
-    "test-command": "mocha --forbid-only 'test/commands/**/*.test.ts'",
-    "test-all": "mocha --forbid-only 'test/**/*.test.ts'",
+    "test-all": "mocha --parallel --forbid-only 'test/**/*.test.ts'",
     "version": "oclif readme && git add README.md"
   },
   "types": "dist/index.d.ts"
