--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,11 @@ on:
   release:
     types: [published]
   workflow_dispatch:
-
+    inputs:
+      revision:
+        description: 'Branch name or commit hash'
+        required: true
+        default: 'main'
 jobs:
   release:
     name: Release ${{ matrix.os }}
