--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,14 @@ jobs:
           os: macos-latest
           artifact_glob: ./dist/macos/*
     steps:
-      - run: sudo apt update
-      - run: sudo apt install nsis p7zip-full p7zip-rar -y
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - run: |
+          if [ "$RUNNER_OS" == "macOS" ]; then
+            brew install makensis
+          fi
       - run: npx oclif pack ${{ matrix.target }} -r .
       - name: Attach artifacts to release
         uses: svenstaro/upload-release-action@v2
