--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,10 @@ jobs:
         - target: deb
           os: ubuntu-latest
           artifact_name: ./dist/deb/*
-        - target: exe
+        - target: win
           os: windows-latest
           artifact_name: ./dist/win/*
-        - target: pkg
+        - target: macos
           os: macos-latest
           artifact_glob: ./dist/macos/*
     steps:
