Split release jobs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,38 +8,61 @@ on:
         required: true
         default: 'main'
 jobs:
-  release:
-    name: Release ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - target: deb
-          os: ubuntu-latest
-          artifact_name: ./dist/deb/*
-        - target: win
-          os: windows-latest
-          artifact_name: ./dist/win/*
-        - target: macos
-          os: macos-latest
-          artifact_glob: ./dist/macos/*
+  #  release:
+  #    name: Release ${{ matrix.os }}
+  #    runs-on: ${{ matrix.os }}
+  #
+  #    strategy:
+  #      fail-fast: false
+  #      matrix:
+  #        include:
+  #        - target: deb
+  #          os: ubuntu-latest
+  #          artifact_name: ./dist/deb/*
+  #        - target: win
+  #          os: windows-latest
+  #          artifact_name: ./dist/win/*
+  #        - target: macos
+  #          os: macos-latest
+  #          artifact_glob: ./dist/macos/*
+  #    steps:
+  #      - uses: actions/checkout@v2
+  #      - uses: actions/setup-node@v2
+  #        with:
+  #          node-version: '16'
+  #      - run: |
+  #          if [ "$RUNNER_OS" == "macOS" ]; then
+  #            brew install makensis
+  #          fi
+  #      - run: npx oclif pack ${{ matrix.target }} -r .
+  #      - name: Attach artifacts to release
+  #        uses: svenstaro/upload-release-action@v2
+  #        with:
+  #          repo_token: ${{ secrets.GITHUB_TOKEN }}
+  #          file: ${{ matrix.artifact_glob }}
+  #          file_glob: true
+  #          overwrite: true
+  #          tag: ${{ github.ref }}
+  release-linux:
+    name: Release deb
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - run: |
-          if [ "$RUNNER_OS" == "macOS" ]; then
-            brew install makensis
-          fi
-      - run: npx oclif pack ${{ matrix.target }} -r .
-      - name: Attach artifacts to release
-        uses: svenstaro/upload-release-action@v2
+      - run: sudo apt update
+      - run: sudo apt install nsis p7zip-full p7zip-rar -y
+      - run: npx oclif pack dep -r .
+
+  release-macos:
+    name: Release macOS
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ matrix.artifact_glob }}
-          file_glob: true
-          overwrite: true
-          tag: ${{ github.ref }}
+          node-version: '16'
+      - run: brew install makensis
+      - run: npx oclif pack macos -r .
+
