--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,8 @@ jobs:
       - run: sudo apt update
       - run: sudo apt install nsis p7zip-full p7zip-rar -y
       - run: npm ci
-      - run: sudo npx oclif pack deb
+      - run: whoami
+      - run: npx oclif pack deb
 
   release-macos:
     name: Release macOS
