--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ matrix.artifact_glob }}
+          file: ./dist/*.tar.{gz,xz}
           file_glob: true
           overwrite: true
           tag: ${{ github.ref }}
@@ -89,7 +89,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ matrix.artifact_glob }}
+          file: ./dist/macos/*
           file_glob: true
           overwrite: true
           tag: ${{ github.ref }}
