--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,5 @@ jobs:
         with:
           node-version: '16'
       - run: npm ci
-      - run: npm run test-all
+      - run: npm run test
 
