--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,19 +25,19 @@ jobs:
           overwrite: true
           tag: ${{ github.ref }}
 
-  #  release-linux:
-  #    name: Release deb
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/checkout@v2
-  #      - uses: actions/setup-node@v2
-  #        with:
-  #          node-version: '16'
-  #      - run: sudo apt update
-  #      - run: sudo apt install nsis p7zip-full p7zip-rar -y
-  #      - run: npm ci
-  #      - run: whoami
-  #      - run: npx oclif pack deb
+  release-linux:
+    name: Release deb
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: sudo apt update
+      - run: sudo apt install nsis p7zip-full p7zip-rar -y
+      - run: npm ci
+      - run: whoami
+      - run: sudo npx oclif pack deb
 
   release-macos:
     name: Release macOS
