--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,7 @@ jobs:
           node-version: '16'
       - run: sudo apt update
       - run: sudo apt install nsis p7zip-full p7zip-rar -y
-      - run: npm ci
-      - run: whoami
+      - run: sudo npm ci
       - run: sudo npx oclif pack deb
 
   release-macos:
