--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,8 @@ jobs:
       options: --user root
     steps:
       - uses: actions/checkout@v2
-      - run: sudo apt update
-      - run: sudo apt install nsis p7zip-full p7zip-rar -y
+      - run: apt update
+      - run: apt install nsis p7zip-full p7zip-rar -y
       - run: npm ci
       - run: npx oclif pack deb
 
