--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wate",
   "description": "A tool for automated tests for web APIs",
-  "version": "0.4.1",
+  "version": "0.5.0-dev",
   "author": "Flo Schuessel @scflode",
   "bin": {
     "wate": "./bin/run"
