--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.38",
     "@types/nunjucks": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
     "chai": "^4",
     "eslint": "^8.16.0",
     "eslint-config-oclif": "^4",
