--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/http-string-parser": "0.0.30",
     "@types/mock-fs": "^4.13.1",
     "ajv": "^8.11.0",
-    "axios": "^1.1.2",
+    "axios": "1.1.0",
     "date-fns": "^2.29.3",
     "exceljs": "^4.3.0",
     "http-string-parser": "0.0.6",
